After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 750606 - validate: media-check: remove unnecessary unref
validate: media-check: remove unnecessary unref
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-devtools
git master
Other Linux
: Normal minor
: 1.5.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-06-09 00:19 UTC by Wonchul Lee
Modified: 2015-06-13 18:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
validate: media-check: remove unnecessary unref (894 bytes, patch)
2015-06-09 00:20 UTC, Wonchul Lee
none Details | Review

Description Wonchul Lee 2015-06-09 00:19:43 UTC
writer instance unrefed twice and got crashed when it could not parse file, so I remove first unref.
Comment 1 Wonchul Lee 2015-06-09 00:20:29 UTC
Created attachment 304823 [details] [review]
validate: media-check: remove unnecessary unref
Comment 2 Tim-Philipp Müller 2015-06-13 18:31:16 UTC
commit 953db96ede36f90672506e1c7d7cc21a34c2b3c6
Author: Wonchul Lee <chul0812@gmail.com>
Date:   Tue Jun 9 09:10:42 2015 +0900

    validate: media-check: fix double unref in error code path
    
    Writer would get unrefed twice when it could not parse the file.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=750606